[package]
name = "spark-connect-comparator-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.0"
prost = "0.13.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
prost-types = "0.13.0"
tonic-reflection = "0.12.0"

async-stream = "0.3.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.12.0"